Initailize ajaxprovider by passing name to API.

--- a/Themes/config/default/admin.cshtml
+++ b/Themes/config/default/admin.cshtml
@@ -16,6 +16,7 @@
     <input id="editlang" type="hidden" value="@Model.Lang"></input> <!-- culture code being edited -->
     <input id="uilang" type="hidden" value="@Model.GetUrlParam("language")" />
     <input id="nextlang" type="hidden" value="@Model.Lang" />
+    <input id="ajaxprovider" type="hidden" value="os_plugintemplatesi" />
 </div>
 <input id="deletemsg" type="hidden" value="@ResourceKey("Admin.deletemsg")"></input> <!-- used for prompt on delete -->
 <div id="nbsnotify"></div>
